<resources>
    <string name="app_name">Manta-Terminal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginOperation">Přihlášení operace</string>
    <string name="barcodeOperation">Čárový kód operace</string>
    <string name="chooseFromList">Vybrat ze seznamu</string>
    <string name="operatrionNotSelect">Není vybraná operace! \n Vyberte prosím operaci.</string>

    <string name="productOrder">Výrobní příkaz</string>
    <string name="operation">Operace</string>
    <string name="OK">Ok</string>
    <string name="NOK">Nok</string>
    <string name="liveCount">Ks. živé</string>
    <string name="remains">Zbývá</string>
    <string name="OKCount">Počet OK kusů</string>
    <string name="NOKCount">Počet NOK kusů</string>
    <string name="CyclesCount">Počet cyklů</string>
    <string name="codeMistake">Kód závady</string>
    <string name="pieces">Ks</string>
    <string name="entered">Zadáno [ks]</string>

    <string name="info">Info</string>
    <string name="nok">NOK</string>
    <string name="consumption">Spotřeba</string>
    <string name="evidence">Evidence</string>
    <string name="evidencePrint">Evidence + Tisk</string>
    <string name="numberToprint">Počet Ks. ve štítku</string>
    <string name="badValues">Špatně vyplněné hodnoty!</string>
    <string name="type">Typ</string>
    <string name="sector">Sektor</string>
    <string name="evidenceNOK">Evidence NOK kusů</string>
    <string name="kindDefect">Druh Závady</string>
    <string name="repairable">Opravitelné</string>
    <string name="nonReparaible">Neopravitelné</string>
    <string name="internalReparaible">Interně opravitelné</string>
    <string name="photo">Foto</string>

    <string name="batch">Šarže</string>
    <string name="place">Umístění</string>
    <string name="name">Název</string>
    <string name="warehouse">Skladem</string>
    <string name="toIssue">K výdeji</string>
    <string name="Issue">Výdej</string>
    <string name="mj">MJ</string>

    <string name="fillConsumption">Zadání spotřeby</string>
    <string name="apkNotInstalled">Aplikace %s není nainstalována!</string>
    <string name="residueToIssue">Nevydáno</string>
    <string name="residue">Zbytek skladu po výdeji</string>
</resources>
