<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tvBatchConsumption"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/batch" />

    <TextView
        android:id="@+id/tvPlaceConsumption"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/place" />

    <TextView
        android:id="@+id/tvNameConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvStockConsumption"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/warehouse" />

    <TextView
        android:id="@+id/tvToIssueConstumption"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/toIssue" />

    <TextView
        android:id="@+id/tvIssueConsumption"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/Issue" />

    <TextView
        android:id="@+id/tvMjConsumption"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/mj" />
</android.widget.LinearLayout>