<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvOperation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/codeMistake"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTypeDef2"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/type"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvOk"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/pieces"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/note"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSectorDef2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/sector"
        android:textStyle="bold" />

</LinearLayout>